# star_wars_explorer

./: .gitignore  README.md  pyproject.toml
star_wars_explorer/: pytest.ini
star_wars_explorer/data_collector/: apps.py  models.py  utils.py
star_wars_explorer/data_collector/api/: client.py
star_wars_explorer/data_collector/migrations/: 0001_initial.py
star_wars_explorer/data_collector/tests/: test_utils.py
star_wars_explorer/data_collector/tests/api/: test_client.py
star_wars_explorer/explorer/: urls.py  utils.py  views.py
star_wars_explorer/explorer/templates/: collections.html  details.html  index.html  value_count.html
star_wars_explorer/explorer/tests/: test_utils.py  test_views.py
star_wars_explorer/star_wars_explorer/: asgi.py  settings.py  urls.py  wsgi.py
