[tool.poetry]
name = "star-wars-explorer"
version = "0.1.0"
description = ""
authors = ["Maciej Baranski <maciej.baranski.gtxm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
petl = "^1.7.15"
django = "^5.0.6"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
responses = "^0.25.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
